<resources>
    <string name="app_name">Student Management System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">user Name</string>
    <string name="nav_header_subtitle">User Email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_gallery">My Courses</string>
    <string name="menu_slideshow">Marks And Grades</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_fragment">"login fragment"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pdffile_viewer">PDFFileViewer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_lecturer_view">LecturerView</string>
    <string name="title_activity_lecture">LectureActivity</string>

    <string name="faculty_prompt">select a faculty</string>
    <string-array name="faculty_arrays">
        <item>---</item>
        <item>Science</item>
        <item>Art</item>
        <item>Commerce</item>
        <item>IT</item>
        <item>Tech</item>
    </string-array>

    <string name="department_prompt">select a faculty</string>
    <string-array name="department_arrays">
        <item>---</item>
        <item>software engineering</item>
        <item>bio</item>
        <item>chemistry</item>
        <item>applied maths</item>
        <item>computer science</item>
        <item>econ</item>
        <item>geography</item>
        <item>agriculture</item>
        <item>food science</item>
        <item>music</item>
        <item>drama</item>
    </string-array>


    <string name="level_prompt">select a faculty</string>
    <string-array name="level_arrays">
        <item>---</item>
        <item>level 1</item>
        <item>level 2</item>
        <item>level 3</item>
        <item>level 4</item>
    </string-array>

    <string name="academicYear_prompt">select a faculty</string>
    <string-array name="academicYear_arrays">
        <item>---</item>
        <item>2017-2018</item>
        <item>2018-2019</item>
        <item>2019-2020</item>
        <item>2020-2021</item>
        <item>2021-2022</item>
    </string-array>

    <string name="semester_prompt">select a faculty</string>
    <string-array name="semester_arrays">
        <item>---</item>
        <item>semester 1</item>
        <item>semester 2</item>
    </string-array>


</resources>